--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <input type="submit" id="srchSubmit" value="Submit">
     </form>
     <table id="srchResults">
+      <caption>0 Search Result&lpar;s&rpar;</caption>
       <thead>
         <tr>
           <th>#</th>
