Make adjustments to feedback API for callback function bug and potential API runtime failures

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </p>
       <input type="submit" id="feedbackSubmit" value="Submit">
     </form>
+    <p id="feedbackResp"></p>
     <script src="main.js"></script>
   </body>
 </html>
