--- a/shopfast-react/public/index.html
+++ b/shopfast-react/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/ShopFast.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/SpeedCart.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ShopFast | Your one-stop shop for groceries</title>
+    <title>SpeedCart | Your one-stop shop for groceries</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
