--- a/speedcart-react/public/index.html
+++ b/speedcart-react/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SpeedCart | Your one-stop shop for groceries</title>
+    <title>SpeedCart | Your destination for optimal shopping routes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
